add: cambios portfolio

--- a/about.html
+++ b/about.html
@@ -36,10 +36,10 @@
         <img src="/img/fondo.png" class="fondo" alt="imagen codigo">
 
         <ul class="sci">
-            <li><a href="https://github.com/yamilerman">
+            <li><a href="https://github.com/yamilerman" target="_blank">
                     <ion-icon name="logo-github"></ion-icon>
                 </a></li>
-            <li><a href="https://www.linkedin.com/in/lermanyami/">
+            <li><a href="https://www.linkedin.com/in/lermanyami/" target="_blank">
                     <ion-icon name="logo-linkedin"></ion-icon>
                 </a></li>
         </ul>
