--- a/proyectos.html
+++ b/proyectos.html
@@ -26,11 +26,11 @@
             <h2>Soy <span id="text">Yamila Lerman</span></h2>
             <p class="proyect">
                 PROYECTOS_Diseño y desarrollo <br>
-                <a href="https://aryaagenciadigital.netlify.app/">ARYA Agencia Digital</a> | <a
-                    href="https://remiseriabj.netlify.app//">Transportes BJ</a> | <a href="">BUNT Regalos
-                    Artesanales</a> | <a href="https://memerytoplay.netlify.app/">Memery to play</a>. <br>
+                <a href="https://aryaagenciadigital.netlify.app/" target="_blank">ARYA Agencia Digital</a> | <a
+                    href="https://remiseriabj.netlify.app//" target="_blank>Transportes BJ</a> | <a href="" target="_blank">BUNT Regalos
+                    Artesanales</a> | <a href="https://memerytoplay.netlify.app/" target="_blank">Memery to play</a>. <br>
                 PROYECTOS_Desarrollo <br>
-                <a href="https://pregopartners.com/">Prego HOME</a> | <a href="https://pregopartners.com/3d/">Prego
+                <a href="https://pregopartners.com/" target="_blank">Prego HOME</a> | <a href="https://pregopartners.com/3d/" target="_blank">Prego
                     3D</a>.<br>
                 Me apasiona trabajar en proyectos desafiantes que me permitan aprender y crecer profesionalmente.<br>
             </p>
@@ -43,10 +43,10 @@
         <img src="/img/fondo.png" class="fondo" alt="imagen codigo">
 
         <ul class="sci">
-            <li><a href="https://github.com/yamilerman">
+            <li><a href="https://github.com/yamilerman" target="_blank">
                     <ion-icon name="logo-github"></ion-icon>
                 </a></li>
-            <li><a href="https://www.linkedin.com/in/lermanyami/">
+            <li><a href="https://www.linkedin.com/in/lermanyami/" target="_blank">
                     <ion-icon name="logo-linkedin"></ion-icon>
                 </a></li>
         </ul>
