add: cambios proyectos

--- a/proyectos.html
+++ b/proyectos.html
@@ -27,7 +27,7 @@
             <p class="proyect">
                 PROYECTOS_Diseño y desarrollo <br>
                 <a href="https://aryaagenciadigital.netlify.app/" target="_blank">ARYA Agencia Digital</a> | <a
-                    href="https://remiseriabj.netlify.app//" target="_blank>Transportes BJ</a> | <a href="" target="_blank">BUNT Regalos
+                    href="https://remiseriabj.netlify.app//" target="_blank">Transportes BJ</a> | <a href="" target="_blank">BUNT Regalos
                     Artesanales</a> | <a href="https://memerytoplay.netlify.app/" target="_blank">Memery to play</a>. <br>
                 PROYECTOS_Desarrollo <br>
                 <a href="https://pregopartners.com/" target="_blank">Prego HOME</a> | <a href="https://pregopartners.com/3d/" target="_blank">Prego
